<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/sort_by_name" />

            <item
                android:id="@+id/action_sort_by_date_created"
                android:title="@string/sort_by_date_created" />

        </menu>

    </item>

    <item
        android:id="@+id/action_show_all"
        android:title="@string/all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_free"
        android:title="@string/free"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_held"
        android:title="@string/held"
        app:showAsAction="never" />

</menu>